# branch-cleaner-gh

./: Cargo.toml  README.md
src/: error.rs  git.rs  github.rs  main.rs  store.rs  tui.rs  view_model.rs
