[package]
name = "branch-cleaner-gh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28"
git2 = "0.20.3"
r3bl_tui = "0.7"
r3bl_rs_utils_core = "0.9"
tokio = { version = "1", features = ["full"] }
octocrab = "0.40"
git-url-parse = "0.4"
thiserror = "1.0"
anyhow = "1.0"
