[package]
name = "branch-cleaner-gh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["github-api"]
github-api = ["dep:octocrab", "dep:git-url-parse", "dep:thiserror", "dep:anyhow"]
in-memory = []

[dependencies]
crossterm = "0.29.0"
git2 = "0.20.3"
ratatui = "0.30.0"
tokio = { version = "1", features = ["full"] }
octocrab = { version = "0.49.5", optional = true }
git-url-parse = { version = "0.6.0", optional = true }
thiserror = { version = "2.0.18", optional = true }
anyhow = { version = "1.0", optional = true }
